# esp-cam-bindings

./: .gitmodules  Cargo.toml  build.rs  sdkconfig.defaults
bindings/: bindings.h
examples/: cam.rs
scripts/: flash.sh
src/: cam.rs  lib.rs
