[package]
name = "esp-cam-bindings"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-hal = "0.40.1"
esp-idf-sys = "0.32"

[build-dependencies]
embuild = "0.30.4"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.32", features = ["binstart"] }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["bindings/components"]
bindings_header = "bindings/bindings.h"
